# roc-microbit

./: .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  app-size.sh  build-app.sh  build-roc.sh  deploy-app.sh
apps/: fib.roc  line_follow.roc  prime.roc
platform/: .gitignore  Cargo.toml  IO.roc  Package-Config.roc  build.rs  rust-toolchain.toml
platform/.cargo/: config
platform/src/: fmt.rs  lsm303agr.rs  main.rs  memory.rs  robot_base.rs
src/: main.rs
