[package]
name = "roc-microbit"
version = "0.1.0"
edition = "2021"

[profile.dev]
debug = 2

[profile.release]
# Add extra debug info, it doesn't get flashed to the device.
debug = 2
codegen-units = 1
lto = true
opt-level = "z"

# Optimize dependencies as well.
[profile.release.package."*"]
codegen-units = 1
opt-level = "z"

[features]
default = ["nightly"]
nightly = ["embassy-nrf/nightly"]

[dependencies]
embassy = { version = "0.1.0", path = "../embassy/embassy", features = ["defmt"] }
embassy-nrf = { version = "0.1.0", path = "../embassy/embassy-nrf", features = ["defmt", "nrf52833", "time-driver-rtc1", "gpiote"] }

defmt = "0.3"
defmt-rtt = "0.3"

cortex-m = "0.7.3"
cortex-m-rt = "0.7.0"
panic-probe = { version = "0.3", features = ["print-defmt"] }
futures = { version = "0.3.17", default-features = false, features = ["async-await"] }
rand = { version = "0.8.4", default-features = false }
embedded-storage = "0.3.0"

usb-device = "0.2"
usbd-serial = "0.1.1"

nalgebra = { version = "0.31.0", default-features = false }
